--- a/main.html
+++ b/main.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <div> <img src="C:\Users\HP\Documents\HTML CSS\portfolio\CHA00404.jpg">
+        <h1>Isha Prakashrao kohale</h1>
+        <a href="https://www.linkedin.com/feed/">My linkdin profile</a>
+    </div><br>
+    <section id="skills" value=" ">MY SKILLS<br>1.java
+        <br> 2.python<br> 3.html<br> 4.css </section>
+    <BR>
+    <SECTION>MY PROJECTS
+        <ul>
+            1. HTML BASIC project
+        </ul>
+        <UL>2.JAVA project </UL>
+    </SECTION>
 </body>
 
 </html>
