--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div> <img src="C:\Users\HP\Documents\HTML CSS\portfolio\CHA00404.jpg">
+    <div> <img src="C:\Users\HP\Documents\HTML CSS\portfolio\CHA00404.jpg" width="50px" height="50px">
         <h1>Isha Prakashrao kohale</h1>
         <a href="https://www.linkedin.com/feed/">My linkdin profile</a>
     </div><br>
