--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
     <section id="skills" value=" ">MY SKILLS<br>1.java
         <br> 2.python<br> 3.html<br> 4.css </section>
     <BR>
-    <SECTION>MY PROJECTS
+    <SECTION id="projects">MY PROJECTS
         <ul>
             1. HTML BASIC project
         </ul>
