--- a/main.html
+++ b/main.html
@@ -16,12 +16,14 @@
     <section id="skills" value=" ">MY SKILLS<br>1.java
         <br> 2.python<br> 3.html<br> 4.css </section>
     <BR>
-    <section id="projects" value=" ">MY PROJECTS
-        <ul>
-            1. HTML BASIC project
-        </ul>
-        <UL>2.JAVA project </UL>
-    </section>
+    <div>
+        <section id="projects" value=" ">MY PROJECTS
+            <ul>
+                1. HTML BASIC project
+            </ul>
+            <UL>2.JAVA project </UL>
+        </section>
+    </div>
 </body>
 
 </html>
