--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
         <br> 2.python<br> 3.html<br> 4.css </section>
     <BR>
     <div>
-        <section id="projects" value=" ">MY PROJECTS
+        <section>MY PROJECTS
             <ul>
                 1. HTML BASIC project
             </ul>
