--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
         <h1>Isha Prakashrao kohale</h1>
         <a href="https://www.linkedin.com/feed/">My linkdin profile</a>
     </div><br>
-    <section id="skills" value=" ">MY SKILLS<br>1.java
+    <section id="skills ,projects" value=" ">MY SKILLS<br>1.java
         <br> 2.python<br> 3.html<br> 4.css </section>
     <BR>
     <div>
@@ -21,7 +21,9 @@
             <ul>
                 1. HTML BASIC project
             </ul>
-            <UL>2.JAVA project </UL>
+            <ul>
+                2.JAVA project
+            </ul>
         </section>
     </div>
 </body>
