--- a/main.html
+++ b/main.html
@@ -13,11 +13,11 @@
         <h1>Isha Prakashrao kohale</h1>
         <a href="https://www.linkedin.com/feed/">My linkdin profile</a>
     </div><br>
-    <section id="skills ,projects" value=" ">MY SKILLS<br>1.java
+    <section id="skills" value=" ">MY SKILLS<br>1.java
         <br> 2.python<br> 3.html<br> 4.css </section>
     <BR>
     <div>
-        <section>MY PROJECTS
+        <section id="projects">MY PROJECTS
             <ul>
                 1. HTML BASIC project
             </ul>
