--- a/main.html
+++ b/main.html
@@ -17,12 +17,12 @@
         <br> 2.python<br> 3.html<br> 4.css </section>
     <BR>
     <div>
-        <section id="#projects">MY PROJECTS
+        <section id="projects">MY PROJECTS
             <ul>
-                1. HTML BASIC project
+                HTML BASIC project
             </ul>
             <ul>
-                2.JAVA project
+                JAVA project
             </ul>
         </section>
     </div>
