--- a/main.html
+++ b/main.html
@@ -14,10 +14,11 @@
         <a href="https://www.linkedin.com/feed/">My linkdin profile</a>
     </div><br>
     <section id="skills" value=" ">MY SKILLS<br>1.java
-        <br> 2.python<br> 3.html<br> 4.css </section>
+        <br> 2.python<br> 3.html<br> 4.css
+    </section>
     <BR>
 
-    <section id="projects ">MY PROJECTS
+    <section id="projects" value=" ">MY PROJECTS
         <ul>
             HTML BASIC project
         </ul>
