--- a/main.html
+++ b/main.html
@@ -13,12 +13,12 @@
         <h1>Isha Prakashrao kohale</h1>
         <a href="https://www.linkedin.com/feed/">My linkdin profile</a>
     </div><br>
-    <section id="skills" value=" ">MY SKILLS<br>1.java
+    <section id="skills">MY SKILLS<br>1.java
         <br> 2.python<br> 3.html<br> 4.css
     </section>
     <BR>
 
-    <section id="projects" value=" ">MY PROJECTS
+    <section id="projects">MY PROJECTS<br>
         <ul>
             HTML BASIC project
         </ul>
