--- a/main.html
+++ b/main.html
@@ -25,6 +25,9 @@
         <ul>
             JAVA project
         </ul>
+        <ul>
+            cpp project
+        </ul>
     </section>
 
 </body>
