--- a/main.html
+++ b/main.html
@@ -20,13 +20,12 @@
 
     <section id="projects">MY PROJECTS<br>
         <ul>
-            HTML BASIC project
-        </ul>
-        <ul>
-            JAVA project
-        </ul>
-        <ul>
-            cpp project
+
+            <li>HTML BASIC project </li>
+
+            <li>JAVA project </li>
+
+            <li>cpp project</li>
         </ul>
     </section>
 
